Add GitHub links to DESCRIPTION

--- a/vignettes/Intro_to_mrgdp.Rmd
+++ b/vignettes/Intro_to_mrgdp.Rmd
@@ -19,11 +19,111 @@ knitr::opts_chunk$set(
 library(mrgdp)
 ```
 
+Autors: 
+
+Dr. Marco Antonio Pérez-Méndez
+Dra. Hortensia Moreno Macias
+Mtra. Jocabed Sánchez Martínez
+
 In this user guide you can see how to use Mexican Regional Gross Domestic Product package (mrgdp). We built several functions to download economic census, filter municipal data and join several years.
+
+## General Description
+
+_mrgdp_ package allows to download, select, clean and built variables from mexican economic census for several years (2004, 2009, 2014 and 2019) and all federal entities. We can filter the census data table by municipal data and build a data.frame for all federal entities and several years. With this data frame we can test a regional convergence hypotesis with econometric models. 
+
+## Objectives
+
+The objectives resesearch are: 1) identifie correct data to built municipal gross domestic product proxy variable; 2) select any federal entitie to built, for several years, the municipal gross domestic product for 2004, 2009, 2014 and 2019; 3) create a data frame with municipal gross domestic product to run an econometric model to test regional convergence hypotesis. 
+
+## Theoretical bases
+
+## programm list
+
+This version of "Mexican Regional Gross Domestic Product" (mrgdp) package include  4 basic functions: 
+1.- Economic_units()
+2.- pbt_munR()
+3.- economic_census()
+4.- PBTM_04-19()
+
+## Flow chart
+
+```{r, echo=FALSE}
+library(DiagrammeR)
+
+DiagrammeR::grViz("digraph {
+
+# initiate graph
+graph [layout = dot, rankdir = LR, label = 'mrgdp package process\n\n',labelloc = t]
+
+# global node settings
+node [shape = rectangle, style = filled, fillcolor = Linen]
+
+# label nodes
+data1 [label = 'INEGI \n Economic \n Census \n  URL', shape = folder, fillcolor = Beige]
+mrgdp [label =  'mrgdp \n package \n functions']
+fa [label= 'function \n arguments' , shape= parallelogram]
+economic_census [label = 'economic_census() ']
+economic_units [label = 'economic_units() ']
+pbtm [label = 'PBTM_04_19() ']
+results [label= 'Results', shape = diamond]
+results2 [label= 'Results2', shape = diamond]
+results3 [label= 'Results3', shape = diamond]
+results4 [label= 'Results4', shape = diamond]
+ecd [label='Economic \n census \n downloaded', shape=cylinder]
+pbtmun [label= 'pbt_mun()' ]
+pbtmun2 [label = 'Municpal \n gross \n domestic \n product', shape=cylinder]
+ecu [label='Economic \n units \n downloaded', shape=cylinder]
+pbtmun4 [label = 'Municpal \n gross \n domestic \n product \n panel', shape=cylinder]
+
+
+# edge definitions with the node IDs
+{data1}  -> fa -> mrgdp -> {economic_census economic_units pbtm}
+economic_census -> results
+results -> {good bad}
+bad -> {'wrong arguments'} -> fa
+good -> ecd -> pbtmun
+pbtmun -> results2 -> {good2 bad2}
+good2 -> pbtmun2
+bad2 -> {'wrong arguments'} -> fa
+economic_units -> results3 ->{good3, bad3}
+good3 -> ecu
+bad3 -> {'wrong arguments'} -> fa
+pbtm -> results4 -> {good4 bad4}
+good4 -> pbtmun4
+bad4 -> {'wrong arguments'} -> fa
+}")
+```
+The internal process of any function is:
+
+```{r, echo=FALSE}
+DiagrammeR::grViz("digraph {
+
+# initiate graph
+graph [layout = twopi, rankdir = RL, label = 'Results_i internal process',labelloc = t]
+
+# global node settings
+node [shape = box, style = filled, fillcolor = Linen]
+
+# label nodes
+functions [label='Select mrgdp function', shape=parallelogram]
+arguments [label='function arguments', shape=parallelogram]
+conect [label = 'INEGI Economic \n Census URL conection']
+download [label= 'Download \n Economic Census in \n temporal memory']
+filter [label= 'Filter data \n  by \n federal entitie \n code']
+build [label='build a dataframe \n of filtered data', shape=cylinder]
+clean [label='clean temporal memory']
+
+# edge definitions with the node IDs
+functions -> arguments -> conect -> download ->filter -> build -> clean
+}")
+```
+
+
+## Operation demostration
 
 The arguments for functions are: 
 
-* year (2004, 2009, 2014 and 2019)
+* year (2004, 2009, 2014 or 2019)
 * state:
 
 | state   | entitie             |
@@ -60,6 +160,8 @@ The arguments for functions are:
 | "yuc"   | Yucatán             |
 | "zac"   | Zacatecas           |
 | "oax"   | Oaxaca              |
+
+select economic_census() function and type '2004' and "ags". The function downloads the economic census for federal entitie and year selected. With names() function we can see the names of all variables on economic census.
 
 ```{r}
 #data <- economic_census(2004, "ags")
@@ -154,7 +256,7 @@ pbt14
 
 
 
-Once economic census is downloaded, we can filter values by municipality. This action is reached by pbt_mun() function:
+Once economic census is downloaded, we can filter values by municipality. This action is reached by pbt_mun() function, this function selects the correct variable that represents a proxy variable of municipal gross domestic product. With tail() function we can see the last six rows of data frame.
 
 ```{r}
 #ags04 <- pbt_mun(data)
@@ -226,3 +328,7 @@ pbt14
 10	01	10	224.185	56.259	118.744	
 11	01	11	3980.801	7271.449	11322.543	
 6 rows | 1-6 of 6 columns
+
+
+
+
